# ralf-gesture-studio

./: CLAUDE.md  Cargo.toml  FORMAT.md  RAW_LEARNINGS.md  README.md  TECHNICAL_SPECIFICATION.md  ralf-graphviz.dot  requirements.md  tauri.conf.json  test_osc_receiver.py  test_osc_sender.py
.claude/commands/: dtw-gesture-recognition.md  rust-impl.md  rust-patterns.md  rust-refactor.md  rust-review.md
.github/workflows/: ci.yml
.llm/: active-plan.md  gesture-recognition-design.md  gesture-recognition-learnings.md
.llm/research/: tesla-ai-prediction-research.md
docs/brainstorms/: 2026-02-21-accuracy-latency-hardening-brainstorm.md
docs/plans/: 2026-01-26-feat-ux-improvements-plan.md  2026-01-27-feat-auto-calibration-ux-plan.md  2026-01-28-feat-motion-energy-gating-plan.md  2026-01-29-fix-recognition-accuracy-timing-echo-plan.md  2026-01-30-echo-analysis-and-fix-plan.md  2026-01-30-recognition-optimization-v2-plan.md  2026-01-30-research-recognition-optimization-plan.md  2026-01-31-enhancement-recognition-performance-refinement-plan.md  2026-02-02-feat-stop-training-and-delete-examples-plan.md  2026-02-22-phase-5-f1-thresholds-handoff.md
docs/research/: 2026-06-18-four-way-tension-hardening-analysis.md
research/: journal.md
src/: main.rs
src/engine/: augmentation.rs  averaging.rs  buffer.rs  diagnostics.rs  dtw.rs  mod.rs  preprocess.rs  quality.rs  recognizer.rs  smoothing.rs  statistics.rs  training.rs  weighting.rs
src/gui/: mod.rs
tests/: recognition_integration.rs
tools/: gesture-viewer.html
ui/: index.html  main.js  styles.css
(+10 files in other folders)
