[package]
name = "ralf-gesture-studio"
version = "0.2.0"
edition = "2021"
description = "Desktop application for training and recognizing movement gestures using DTW"
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform paths
directories = "5.0"

# Error handling
thiserror = "1.0"

# Tauri for GUI
tauri = { version = "2", features = [] }

# OSC protocol
rosc = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "sync", "time"] }

# Thread-safe communication
crossbeam-channel = "0.5"

# Audio playback for training cues
rodio = "0.19"

# Native file dialogs
rfd = "0.14"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.10"
